--- a/pom.xml
+++ b/pom.xml
@@ -96,9 +96,20 @@
 			<artifactId>service</artifactId>
 			<version>0.18.2</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.cloudinary</groupId>
+			<artifactId>cloudinary-http44</artifactId>
+			<version>1.34.0</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.ai</groupId>
 			<artifactId>spring-ai-openai-spring-boot-starter</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.ai</groupId>
+			<artifactId>spring-ai-mongodb-atlas-store-spring-boot-starter</artifactId>
 		</dependency>
 	</dependencies>
 
